too long distance in contacts corrected

--- a/css/clientsSpeakAboutUs.css
+++ b/css/clientsSpeakAboutUs.css
@@ -1,27 +1,23 @@
 .clientSpeakAboutUs__container {
 	max-width: 100%;
-	height: 748px;
 	padding: 0px 15px;
 	overflow: hidden;
 	margin: 0 auto;
 }
 @media (min-width: 480px){
 	.clientSpeakAboutUs__container {
-		width: 480px;
+		width: 400px;
 		padding: 0;
-		height: 786px;
 	}
 }
 @media (min-width: 768px){
 	.clientSpeakAboutUs__container {
 		width: 748px;
-		height: 510px;
 	}
 }
 @media (min-width: 1000px){
 	.clientSpeakAboutUs__container {
 		width: 1000px;
-		height: 650px;
 	}
 }
 @media (min-width: 1920px){
